[gd_scene load_steps=34 format=2]

[ext_resource path="res://Levels/Parent/Level.tscn" type="PackedScene" id=1]
[ext_resource path="res://Levels/Level5/Level5.gd" type="Script" id=2]
[ext_resource path="res://Levels/Level5/RingingEars.wav" type="AudioStream" id=3]
[ext_resource path="res://Levels/Level1/Eyelid.png" type="Texture" id=4]
[ext_resource path="res://Blood/BloodSplats.png" type="Texture" id=5]
[ext_resource path="res://Levels/Level3/Floor2.png" type="Texture" id=6]
[ext_resource path="res://Objects/Decor/Chair.png" type="Texture" id=7]
[ext_resource path="res://Objects/Decor/Table.png" type="Texture" id=8]
[ext_resource path="res://Enemies/Pig/Pig.tscn" type="PackedScene" id=9]
[ext_resource path="res://Objects/Ethanol/Ethanol.tscn" type="PackedScene" id=10]
[ext_resource path="res://Enemies/Elephant/Elephant.tscn" type="PackedScene" id=11]
[ext_resource path="res://Enemies/Parent/Speech.tscn" type="PackedScene" id=12]
[ext_resource path="res://Objects/WallPolygon/WallPolygon.tscn" type="PackedScene" id=13]
[ext_resource path="res://Levels/Level2/Bricks1.png" type="Texture" id=14]
[ext_resource path="res://Objects/Door/Door.tscn" type="PackedScene" id=15]
[ext_resource path="res://Misc/Background/Background.tscn" type="PackedScene" id=16]
[ext_resource path="res://Misc/Background/Background.tres" type="Shader" id=17]
[ext_resource path="res://Misc/Fonts/coolvetica rg.otf" type="DynamicFontData" id=18]

[sub_resource type="OpenSimplexNoise" id=4]
octaves = 1
period = 103.9

[sub_resource type="NoiseTexture" id=5]
seamless = true
noise = SubResource( 4 )

[sub_resource type="ShaderMaterial" id=14]
resource_local_to_scene = true
shader = ExtResource( 17 )
shader_param/colour1 = Color( 0.235294, 0.0313726, 0.0313726, 1 )
shader_param/colour2 = Color( 0.164706, 0.0784314, 0.0784314, 1 )
shader_param/speed = 0.07
shader_param/noise = SubResource( 5 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="Animation" id=15]
length = 6.0
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Transition/Top:margin_bottom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 0.9, 1.1, 1.6, 2, 2.6, 3, 3.325, 3.6, 4.6, 5.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 250, 250, 182.0, 250, 250, 150, 150, 250, 250, 102, 102, 70 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Transition/Bottom:margin_top")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7, 0.9, 1.1, 1.6, 2, 2.6, 3, 3.325, 3.6, 4.6, 5.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -250, -250, -150.0, -250, -250, -150.0, -150.0, -250, -250, -102, -102, -70 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Transition:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 5.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Cover:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 5.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Cover:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.7, 0.9, 1.7, 2.25, 2.6, 3, 3.3, 3.55 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.792157 ), Color( 1, 1, 1, 0.792157 ), Color( 1, 1, 1, 0.45098 ), Color( 1, 1, 1, 0.792157 ), Color( 1, 1, 1, 0.45098 ), Color( 1, 1, 1, 0.45098 ), Color( 1, 1, 1, 0.792157 ), Color( 1, 1, 1, 0.792157 ), Color( 1, 1, 1, 0 ) ]
}
tracks/5/type = "method"
tracks/5/path = NodePath("..")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 3.55 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "startSpeech"
} ]
}

[sub_resource type="Animation" id=16]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Transition/Top:margin_bottom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 246.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Transition/Bottom:margin_top")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -214.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Transition:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Cover:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Cover:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 15.5, 7 )

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("SpecialEthanol:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpecialEthanol:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 144, -10 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "Slide"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("SpecialEthanol:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpecialEthanol:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.6, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 144, -10 ), Vector2( 144, -10 ), Vector2( 144, -10 ), Vector2( 49, -10 ) ]
}

[sub_resource type="NavigationPolygon" id=12]
vertices = PoolVector2Array( -272, -144, 368, -144, 208, -80, -16, -80, 368, 144, 208, 80, -216, 144, -16, 80, -232, 144, -272, 144, -216, 296, -232, 296 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ), PoolIntArray( 2, 1, 4, 5 ), PoolIntArray( 5, 4, 6, 7 ), PoolIntArray( 8, 9, 0, 3, 7 ), PoolIntArray( 8, 7, 6 ), PoolIntArray( 8, 6, 10, 11 ) ]
outlines = [ PoolVector2Array( -272, -144, 368, -144, 368, 144, -216, 144, -216, 296, -232, 296, -232, 144, -272, 144 ), PoolVector2Array( 208, -80, -16, -80, -16, 80, 208, 80 ) ]

[sub_resource type="CircleShape2D" id=13]
radius = 64.4981

[sub_resource type="DynamicFont" id=17]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 18 )

[sub_resource type="DynamicFont" id=18]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 18 )

[node name="Level5" instance=ExtResource( 1 )]
script = ExtResource( 2 )
tracks = PoolStringArray( "hideout", "notlikethis" )

[node name="Background" parent="." index="0" instance=ExtResource( 16 )]

[node name="Panel" parent="Background" index="0"]
material = SubResource( 14 )

[node name="Eyes" type="CanvasLayer" parent="." index="1"]

[node name="Cover" type="Panel" parent="Eyes" index="0"]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 8 )

[node name="Transition" type="Control" parent="Eyes" index="1"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -64.0
margin_bottom = 64.0

[node name="Top" type="VBoxContainer" parent="Eyes/Transition" index="0"]
anchor_right = 1.0
margin_bottom = 246.0
custom_constants/separation = 0

[node name="Panel" type="Panel" parent="Eyes/Transition/Top" index="0"]
margin_right = 512.0
margin_bottom = 96.0
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )

[node name="Lid" type="TextureRect" parent="Eyes/Transition/Top" index="1"]
margin_top = 96.0
margin_right = 512.0
margin_bottom = 128.0
rect_min_size = Vector2( 0, 32 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 1

[node name="Bottom" type="VBoxContainer" parent="Eyes/Transition" index="1"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -214.0
custom_constants/separation = 0

[node name="Lid" type="TextureRect" parent="Eyes/Transition/Bottom" index="0"]
margin_right = 512.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 1
flip_v = true

[node name="Panel" type="Panel" parent="Eyes/Transition/Bottom" index="1"]
margin_top = 32.0
margin_right = 512.0
margin_bottom = 128.0
size_flags_vertical = 3
custom_styles/panel = SubResource( 3 )

[node name="OpenEyes" type="AnimationPlayer" parent="Eyes" index="2"]
autoplay = "Open"
playback_speed = 0.8
anims/Open = SubResource( 15 )
anims/RESET = SubResource( 16 )

[node name="Alligator" parent="Alligator" index="0"]
hasGun = false
canMove = false

[node name="Legs" parent="Alligator/Alligator/Graphics" index="0"]
frame = 5

[node name="Camera" parent="Alligator/Alligator" index="3"]
current = false

[node name="AnimatedSprite" parent="Alligator/Alligator/Lighter" index="2"]
frame = 2

[node name="Blood" type="Sprite" parent="Alligator/Alligator" index="15"]
self_modulate = Color( 0.996078, 0.215686, 0.215686, 1 )
position = Vector2( -3.5, -6 )
rotation = -3.58602
scale = Vector2( 0.2, 0.2 )
z_index = 2
texture = ExtResource( 5 )
hframes = 4
frame = 1

[node name="Blood2" type="Sprite" parent="Alligator/Alligator" index="16"]
self_modulate = Color( 0.996078, 0.215686, 0.215686, 1 )
position = Vector2( -7, -3 )
rotation = -3.40339
scale = Vector2( 0.2, 0.2 )
z_index = 2
texture = ExtResource( 5 )
hframes = 4

[node name="RingingEars" type="AudioStreamPlayer" parent="." index="4"]
stream = ExtResource( 3 )
volume_db = -15.0

[node name="Start" type="Node2D" parent="." index="5"]

[node name="Floor" type="Polygon2D" parent="Start" index="0"]
z_index = -20
z_as_relative = false
color = Color( 0.423529, 0.423529, 0.423529, 1 )
texture = ExtResource( 6 )
texture_scale = Vector2( 0.4, 0.4 )
polygon = PoolVector2Array( -336, -208, -336, 208, -272, 208, -272, 648, -176, 648, -176, 208, 432, 208, 432, -208 )

[node name="Chair" type="Sprite" parent="Start" index="1"]
position = Vector2( -6, 0 )
scale = Vector2( 2, 2 )
z_index = -10
z_as_relative = false
texture = ExtResource( 7 )

[node name="Chair2" type="Sprite" parent="Start" index="2"]
position = Vector2( 198, 0 )
rotation = 3.14159
scale = Vector2( 2, 2 )
z_index = -10
z_as_relative = false
texture = ExtResource( 7 )

[node name="Desk" type="StaticBody2D" parent="Start" index="3"]
position = Vector2( 96, 0 )
rotation = 3.14159
scale = Vector2( 4, 4 )
collision_layer = 256
collision_mask = 0

[node name="Sprite" type="Sprite" parent="Start/Desk" index="0"]
texture = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Start/Desk" index="1"]
position = Vector2( -0.5, 0 )
shape = SubResource( 9 )

[node name="Pig1" parent="Start" index="4" instance=ExtResource( 9 )]
position = Vector2( -128, 0 )
aggressive = false

[node name="Pig2" parent="Start" index="5" instance=ExtResource( 9 )]
position = Vector2( -96, -64 )
rotation = 0.596143
aggressive = false

[node name="Pig3" parent="Start" index="6" instance=ExtResource( 9 )]
position = Vector2( -96, 64 )
rotation = -0.464573
aggressive = false

[node name="SpecialEthanol" parent="Start" index="7" instance=ExtResource( 10 )]
visible = false
position = Vector2( 144, -10 )

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Start/SpecialEthanol" index="5"]
position = Vector2( -48, 10 )
remote_path = NodePath("../../CinematicCamera")
update_rotation = false
update_scale = false

[node name="Elephant" parent="Start" index="8" instance=ExtResource( 11 )]
position = Vector2( 192, 0 )
rotation = -3.14159

[node name="Speech" parent="Start" index="9" instance=ExtResource( 12 )]
visible = false
position = Vector2( 192, -64 )

[node name="Chip" parent="Start" index="10" instance=ExtResource( 12 )]
visible = false
position = Vector2( -64, -128 )

[node name="Animation" type="AnimationPlayer" parent="Start" index="11"]
anims/RESET = SubResource( 11 )
anims/Slide = SubResource( 10 )

[node name="WallPolygon" parent="Start" index="12" instance=ExtResource( 13 )]
z_index = -19
z_as_relative = false
texture = ExtResource( 14 )
texture_scale = Vector2( 0.5, 0.5 )
texture_rotation_degrees = 90.0
polygon = PoolVector2Array( 416, -192, -320, -192, -320, 192, -256, 192, -256, 640, -224, 640, -224, 672, -288, 672, -288, 640, -288, 224, -352, 224, -352, -224, 448, -224, 448, 224, -160, 224, -160, 672, -224, 672, -224, 640, -192, 640, -192, 192, 416, 192 )
__meta__ = {
"_edit_group_": true,
"_editor_description_": ""
}

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="Start" index="13"]
navpoly = SubResource( 12 )

[node name="Exit" type="Position2D" parent="Start" index="14"]
position = Vector2( -224, 288 )

[node name="Door" parent="Start" index="15" instance=ExtResource( 15 )]
position = Vector2( -224, 208 )
rotation = -1.5708
collision_layer = 512

[node name="ExitTrigger" type="Area2D" parent="Start" index="16"]
position = Vector2( -224, 328 )
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Start/ExitTrigger" index="0"]
shape = SubResource( 13 )

[node name="CinematicCamera" type="Camera2D" parent="Start" index="17"]
position = Vector2( 96, 0 )
zoom = Vector2( 1.2, 1.2 )

[node name="InstructionsBite" type="Node2D" parent="Start" index="18"]
visible = false
position = Vector2( 0, -104 )
z_index = 100

[node name="Label" type="Label" parent="Start/InstructionsBite" index="0"]
modulate = Color( 1, 0.337255, 0.337255, 0.443137 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -94.5
margin_top = -15.0
margin_right = 94.5
margin_bottom = 15.0
custom_fonts/font = SubResource( 17 )
text = "Right Click To Bite"
align = 1
valign = 1

[node name="InstructionsSpit" type="Node2D" parent="Start" index="19"]
visible = false
position = Vector2( 24, -120 )
z_index = -4

[node name="Label" type="Label" parent="Start/InstructionsSpit" index="0"]
modulate = Color( 0.631373, 0.917647, 0.992157, 0.447059 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -146.0
margin_top = -18.0
margin_right = 112.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 18 )
text = "Right Click Again to Spit"
valign = 1
autowrap = true

[node name="ThinkingTime" type="Timer" parent="." index="7"]
wait_time = 7.0
one_shot = true

[connection signal="destroyed" from="Start/SpecialEthanol" to="." method="_on_SpecialEthanol_destroyed"]
[connection signal="died" from="Start/Elephant" to="." method="_on_Elephant_died"]
[connection signal="trigger" from="Start/Speech" to="." method="_on_Speech_trigger"]
[connection signal="body_entered" from="Start/ExitTrigger" to="." method="_on_ExitTrigger_body_entered"]
[connection signal="timeout" from="ThinkingTime" to="." method="_on_ThinkingTime_timeout"]

[editable path="Background"]
[editable path="Alligator/Alligator"]
